--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collapible-tree",
+  "name": "market",
   "homepage": "https://sieux00.github.io/market",
   "version": "0.1.0",
   "private": true,
